--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -15,6 +15,10 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/switch_styles.css">
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
+    <!--Personalizamos los botones de la paginacion-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pagination_styles.css">
+    <!--Se agrega la libreria de DataTables para la paginación-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
 </head>
 
 <body class="mt-5 mb-5">
@@ -48,7 +52,7 @@
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
                     <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
-                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search" id="searchInput" name="search" placeholder="Buscar un producto...">
+                    <p>Haz clíc en el siguiente botón para poder agregar un nuevo producto.</p>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <button
@@ -68,7 +72,7 @@
         </div>
         <!-- Tabla -->
         <div class="container mt-4 table-responsive">
-            <table class="table align-middle">
+            <table class="table align-middle" id="paginationTable">
                 <thead class="table">
                     <tr>
                         <td colspan="7" id="rowsFound" hidden></td>
@@ -278,12 +282,18 @@
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Agregamos la libreria para las alertas -->
     <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <!--Agregamos la libreria para la paginacion -- jquery y js-->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Agregamos el controlador general de la aplicacion-->
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
     <!-- Agregamos el controlador de la pagina web -->
     <script type="text/javascript" src="../../controllers/admin/productos.js"></script>
+    <!-- Nos permite cambiar el idioma de la paginacion-->
+    <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
 
 </html>
