Pagination added in pedidos and comments

--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -139,6 +139,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+    <!-- Agregamos el controlador general de la aplicacion-->
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Script personalizado -->
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
@@ -146,10 +147,6 @@
     <script type="text/javascript" src="../../controllers/admin/marcas.js"></script>
     <!-- Nos permite cambiar el idioma de la paginacion-->
     <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
-    
-    
-
 </body>
-
 
 </html>
