--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -18,6 +18,10 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
     <!-- Agregamos el archivo css para estilizar los switch-->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/switch_styles.css">
+    <!--Personalizamos los botones de la paginacion-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pagination_styles.css">
+    <!--Se agrega la libreria de DataTables para la paginación-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
 </head>
 
 <body class="mt-5">
@@ -43,16 +47,15 @@
             <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
-                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
-                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search" id="searchInput" name="search" placeholder="Buscar un producto en especifico...">
+                    <p>Revisa diariamente los comentarios y recuerda que puedes ocultarlos.</p>
                 </div>
             </div>
         </div>
 
         <!-- Contenido principal: Tabla de comentarios -->
-        <div class="container p-4 mt-4">
+        <div class="container p-3 mt-3">
             <div class="table-responsive">
-                <table class="table">
+                <table class="table" id="paginationTable">
                     <thead class="table">
                         <tr>
                             <td colspan="7" id="rowsFound" hidden></td>
@@ -94,7 +97,7 @@
                             <div class="row">
                                 <div class="col-4">
                                     <div class="container d-flex align-items-center justify-content-center">
-                                        <img src="../../resources/img/png/ejemplo_producto.png" id="imagen" class="tamanio_imagen_agregar" alt="">
+                                        <img src="../../resources/img/png/ejemplo_producto.png" id="imagen" class="tamanio_imagen_agregar" width="180px" height="180px">
                                     </div>
                                 </div>
                                 <div class="col-4">
@@ -178,14 +181,20 @@
 
     <!-- Framework Bootstrap - JS -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para las alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <!--Agregamos la libreria para la paginacion -- jquery y js-->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+    <!-- Agregamos el controlador general de la aplicacion-->
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
     <!-- Agregamos el controlador de la pagina web -->
     <script type="text/javascript" src="../../controllers/admin/valoraciones.js"></script>
-    <!-- Agregamos la libreria para las alertas -->
-    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- Agregamos el controlador general de la aplicacion-->
-    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+    <!-- Nos permite cambiar el idioma de la paginacion-->
+    <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
 
 </html>
