--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -15,8 +15,10 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
     <!-- Agregamos su archivo css para el estilo de pedido estado pedido -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pedidos.css">
-    <!-- Agregamos la libreria de los iconos -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Personalizamos los botones de la paginacion-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pagination_styles.css">
+    <!--Se agrega la libreria de DataTables para la paginación-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
 </head>
 
 <body class="mt-5">
@@ -41,19 +43,17 @@
         <div class="container mt-4">
             <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
             <div class="row align-items-center gy-4">
-                <div class="col-md-6 col-lg-6">
-                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
-                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search"
-                        id="searchInput" name="search" placeholder="Buscar...">
+                <div>
+                    <p>Observa todos los pedidos que se han tenido en Huellitas Pet's, recuerda cambiar el estado de los pedidos.</p>
                 </div>
             </div>
         </div>
 
         <!-- Empieza la programación de las tablas
       Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->
-        <div class="container mt-5">
+        <div class="container mt-4">
             <div class="table-responsive">
-                <table class="table align-middle text-center">
+                <table class="table align-middle text-center" id="paginationTable">
                     <!-- Encabezado de las tablas -->
                     <thead class="table table-responsive">
                         <tr>
@@ -192,17 +192,19 @@
 
     <!-- Framework Bootstrap - JS -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para alertas -->
     <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- Agregamos el framework de Bootstrap - JS -->
-    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Agregamos la libreria para la paginacion -- jquery y js-->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Agregamos el controlador general de la aplicacion-->
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos el script del menu-->
     <script src="../../controllers/utils/admin.js"></script>
     <!-- Script funcionamiento -->
     <script type="text/javascript" src="../../controllers/admin/pedidos.js"></script>
+    <!-- Nos permite cambiar el idioma de la paginacion-->
+    <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
-
-
-
 </html>
