--- a/system_huellitas/views/admin/scrud_clientes.html
+++ b/system_huellitas/views/admin/scrud_clientes.html
@@ -15,6 +15,10 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
     <!-- Agregamos el archivo css para estilizar los switch-->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/switch_styles.css">
+    <!--Personalizamos los botones de la paginacion-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pagination_styles.css">
+    <!--Se agrega la libreria de DataTables para la paginación-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
 </head>
 
 <body class="mt-5">
@@ -40,16 +44,14 @@
             <div class="row align-items-center ">
                 <!--Buscador-->
                 <div class="col-md-6 col-lg-6">
-                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
-                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search"
-                        id="searchInput" name="search" placeholder="Buscar...">
+                    <p>Observa los clientes que se han registrado en Huellitas pet's.</p>
                 </div>
             </div>
         </div>
         <!-- Tabla -->
         <div class="container mt-5">
             <div class="table-responsive">
-                <table class="table align-middle">
+                <table class="table align-middle" id="paginationTable">
                     <!-- Encabezado de las tablas -->
                     <thead class="table table-responsive">
                         <tr>
@@ -194,11 +196,18 @@
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Agregamos la libreria para alertas -->
     <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <!--Agregamos la libreria para la paginacion -- jquery y js-->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Agregamos el controlador general de la aplicacion-->
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
-    <!-- Agregamos el controlador de la pagina web -->    <script type="text/javascript" src="../../controllers/admin/clientes.js"></script>
+    <!-- Agregamos el controlador de la pagina web -->
+    <script type="text/javascript" src="../../controllers/admin/clientes.js"></script>
+    <!-- Nos permite cambiar el idioma de la paginacion-->
+    <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
 
 </html>
