--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -13,10 +13,12 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
     <!-- Agregamos su archivo css para el estilo de la tabla -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
-    <!-- Agregamos la libreria de los iconos -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Agregamos el archivo css para estilizar los switch-->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/switch_styles.css">
+    <!--Personalizamos los botones de la paginacion-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/pagination_styles.css">
+    <!--Se agrega la libreria de DataTables para la paginación-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
 </head>
 
 <body class="mt-5">
@@ -41,9 +43,7 @@
             <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
-                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
-                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search"
-                        id="searchInput" name="search" placeholder="Buscar...">
+                    <p>Haz clíc en el siguiente botón para poder agregar un nuevo permiso.</p>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <!-- Este texto solo se mostrara en pantallas pequeñas, el .d-none esconde elementos -->
@@ -64,7 +64,7 @@
       Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->
         <div class="container mt-5">
             <div class="table-responsive">
-                <table class="table align-middle text-center">
+                <table class="table align-middle text-center" id="paginationTable">
                     <!-- Encabezado de las tablas -->
                     <thead class="table table-responsive">
                         <tr>
@@ -208,15 +208,20 @@
     </main>
     <!-- Framework Bootstrap - JS -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para alertas -->
     <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- Agregamos el framework de Bootstrap - JS -->
-    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Agregamos la libreria para la paginacion -- jquery y js-->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Agregamos el controlador general de la aplicacion-->
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos el script del menu-->
     <script src="../../controllers/utils/admin.js"></script>
     <!-- Script funcionamiento -->
     <script type="text/javascript" src="../../controllers/admin/permisos.js"></script>
+    <!-- Nos permite cambiar el idioma de la paginacion-->
+    <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
 
 </html>
