Cambie el estilo de los switches

--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -125,7 +125,7 @@
                                 name="switch_ActualizarCuponN">
                                 <label class="form-check-label fw-bold" for="estadoCupon">Cupón
                                     habilitado</label>
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                <input class="form-check-input" type="checkbox" role="switch"
                                     id="estadoCupon" name="estadoCupon" checked>
                             </div>
                         </div>
