--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -116,7 +116,7 @@
                          todo el espacio disponible y sino se ordenen 2 inputs a la par-->
                                 <div class="col-sm-12 col-md-6">
                                     <div class="form-switch form-check" id="SwCrearUsuarios_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_cliente" name="ver_cliente" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             clientes</label>
@@ -125,7 +125,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwEliminarUsuarios_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_marca" name="ver_marca" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             marcas</label>
@@ -134,7 +134,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwCrearProductos_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_pedido" name="ver_pedido" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             pedidos</label>
@@ -143,7 +143,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwEliminarProducto_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_comentario" name="ver_comentario" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             comentarios</label>
@@ -152,7 +152,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwBorrarComentario_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_producto" name="ver_producto" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             productos</label>
@@ -161,7 +161,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwCrearCategorias_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_categoria" name="ver_categoria" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             categorias</label>
@@ -170,7 +170,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwBorrarCategorias_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_cupon" name="ver_cupon" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             cupones</label>
@@ -179,7 +179,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwGestionarCupones_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_permiso" name="ver_permiso" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             permisos</label>
@@ -188,7 +188,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwGestionarCupones_AgregarPermisos">
-                                        <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_usuario" name="ver_usuario" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             empleados</label>
