--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -123,7 +123,7 @@
                                     </div>
                                     <div class="col-sm-12 col-md-auto">
                                         <div class="form-check form-switch float-end mb-md-5">
-                                            <input class="form-check-input bg-orange-color" type="checkbox"
+                                            <input class="form-check-input" type="checkbox"
                                                 role="switch" id="switchPerros" name="EstadoProducto" checked >
                                         </div>
                                     </div>
