--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -159,7 +159,7 @@
                                     </div>
                                     <div class="form-check form-switch float-end mb-md-5">
                                         <label class="form-check-label" for="estadoValoracion">Estado</label>
-                                        <input class="form-check-input bg-orange-color" type="checkbox"
+                                        <input class="form-check-input" type="checkbox"
                                             role="switch" id="switchComentarios" name="estadoValoracion" checked >
                                     </div>
                                     <br>
