Modifique la paginancion en productos, marcas y categorias

--- a/system_huellitas/views/admin/scrud_categorias.html
+++ b/system_huellitas/views/admin/scrud_categorias.html
@@ -61,7 +61,7 @@
         <div class="container p-3 mt-4">
             <div class="table-responsive">
                 <!--Agregamos el id a la tabla para poder utilizar la paginacion-->
-                <table class="table" id="paginationTable">
+                <table class="table align-middle" id="paginationTable">
                     <thead>
                         <tr>
                             <td colspan="8" id="rowsFound" hidden></td>
@@ -76,8 +76,6 @@
                     </thead>
                     <tbody id="tableBody"></tbody>
                 </table>
-                <!--Aca aparecera el codigo para mostrar el mensaje cuando no se encuentren los registros-->
-                <div id="anyTable"></div>
             </div>
         </div>
 
