--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -60,7 +60,7 @@
         <!-- Contenido principal: Tabla de marcas -->
         <div class="container p-3 mt-4">
             <div class="table-responsive">
-                <table class="table" id="paginationTable">
+                <table class="table align-middle" id="paginationTable">
                     <thead>
                         <tr>
                             <td colspan="8" id="rowsFound" hidden></td>
@@ -74,7 +74,6 @@
                     </thead>
                     <tbody id="tableBody"></tbody>
                 </table>
-                <div id="anyTable"></div>
             </div>
         </div>
 
