Agregué un poco de diseño en algunas tablas

--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -55,17 +55,18 @@
             <div class="table-responsive">
                 <table class="table align-middle text-center" id="paginationTable">
                     <!-- Encabezado de las tablas -->
-                    <thead class="table table-responsive">
+                    <thead class="table table-responsive text-center">
                         <tr>
-                            <td colspan="7" id="rowsFound" hidden></td>
+                            <td colspan="8" id="rowsFound" hidden></td>
                         </tr>
                         <tr class="table-warning">
                             <!-- Las columnas habitualmente son estáticas, en este caso siempre serán estáticas -->
-                            <th>Cliente</th>
-                            <th>Fecha registro</th>
-                            <th>Productos</th>
-                            <th>Estado</th>
-                            <th>Acciones</th>
+                            <th class="text-center">Cliente</th>
+                            <th class="text-center">Fecha registro</th>
+                            <th class="text-center">Productos</th>
+                            <th class="text-center">Estado</th>
+                            <th class="text-center">Cambiar estado</th>
+                            <th class="text-center">Acciones</th>
                         </tr>
                     </thead>
                     <!-- Cuerpo de la tabla -->
