--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -72,8 +72,8 @@
                         </tr>
                         <tr class="table-warning">
                             <!-- Las columnas habitualmente son estáticas, en este caso siempre serán estáticas -->
-                            <th>Nombre</th>
-                            <th>Acciones</th>
+                            <th class="text-center">Nombre</th>
+                            <th class="text-center">Acciones</th>
                         </tr>
                     </thead>
                     <!-- Cuerpo de la tabla -->
