--- a/system_huellitas/views/admin/settings.html
+++ b/system_huellitas/views/admin/settings.html
@@ -52,7 +52,7 @@
                         <br>
                         <div class="container text-center">
                             <!-- Botón para cargar imagen -->
-                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden required>
+                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden>
                             <label class="btn btn-orange-color text-light " for="imgAdmin">Cargar
                                 imagen</label>
                             <br>
@@ -90,15 +90,6 @@
                                 <div class="col-sm-6">
                                     <input class="form-control tamanio_input bg-grey" type="text"
                                         name="aliasAdmin" id="AdminAlias" readonly required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="mb-0 row container d-flex align-items-center justify-content-center">
-                                <label for="AdminPassword"
-                                    class="col-sm-1 col-form-label texto_input"><strong>Contraseña</strong></label>
-                                <div class="col-sm-6">
-                                    <input type="password" name="claveAdmin" id="AdminPassword"
-                                        class="form-control tamanio_input bg-grey">
                                 </div>
                             </div>
                             <br>
