--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -164,8 +164,7 @@
                                     <br>
                                     <!-- Botones de acción (Agregar, Ocultar) -->
                                     <div class="container text-center">
-                                        <button type="button" class="btn btn-orange-color text-white mx-3">
-                                            Regresar</button>
+                                        <button type="button" class="btn btn-orange-color text-white mx-3" data-bs-dismiss="modal" aria-label="Close">Regresar</button>
                                         <button type="submit" data-bs-dismiss="modal" id="btnGuardar" name="btnGuardar" class="btn btn-red-color text-white">Actualizar estado</button>
                                     </div>
                                     <br>
