Primera revisión de validaciones

--- a/system_huellitas/views/admin/scrud_categorias.html
+++ b/system_huellitas/views/admin/scrud_categorias.html
@@ -119,14 +119,14 @@
                                 <div class="mb-3">
                                     <!-- Nombre de la categoría -->
                                     <label for="nombreCategoria" class="fs-8 fw-bold"> Nombre</label>
-                                    <input type="text" class="form-control" id="nombreCategoria" name="nombreCategoria"
-                                        aria-label="codigo">
+                                    <input type="text" class="form-control" id="nombreCategoria" name="nombreCategoria" placeholder="Escribe el nombre de la categoría"
+                                        required>
                                     <br>
                                     <div class="mb-3">
                                         <!-- Descripción de la categoría -->
                                         <label for="descripcionCategoria" class="form-label fw-bold">Descripción</label>
-                                        <textarea class="form-control" name="descripcionCategoria"
-                                            id="descripcionCategoria" rows="3"></textarea>
+                                        <textarea class="form-control" name="descripcionCategoria" placeholder="Escribe la descripción de esta categoría"
+                                            id="descripcionCategoria" required rows="3"></textarea>
                                     </div>
                                     <br>
                                     <div class="container text-center">
