--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -103,17 +103,17 @@
                             <!-- Fila 1 -->
                             <input type="hidden" id="idAdministrador" name="idAdministrador">
                             <div class="container text-center text-md-start text-lg-start">
-                                <div class="row align-items-center gy-3">
+                                <div class="row align-items-center gy-3 justify-content-center text-center">
                                     <div class="col-sm-12 col-md-auto">
-                                        <img class="rounded-1" id="imagen" src="../../resources/img/png/rectangulo.png"
-                                            width="120px" height="120px">
-                                    </div>
-                                    <div class="col">
-                                        <!-- Botón para cargar imagen -->
-                                        <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden>
-                                        <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                        <label class="btn btn-red-color text-light " for="imgAdmin">Cargar
-                                            imagen</label>
+                                        <img class="rounded-circle" id="imagen" src="../../resources/img/png/rectangulo.png"
+                                            width="130px" height="130px">
+                                        <div class="mt-2">
+                                            <!-- Botón para cargar imagen -->
+                                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden>
+                                            <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                            <label class="btn btn-red-color text-light btn-sm" for="imgAdmin">Cargar
+                                                imagen</label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -122,46 +122,45 @@
                                 <div class="row">
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <div class="mb-3">
-                                            <label for="nombreAdmin" class="form-label fw-semibold">Nombre</label>
-                                            <input type="text" class="form-control" id="nombreAdmin" name="nombreAdmin"
-                                                required>
+                                            <label for="nombre_admin" class="form-label fw-semibold">Nombre</label>
+                                            <input type="text" class="form-control" id="nombre_admin" name="nombreAdmin"
+                                                placeholder="Maria Esmeralda" required>
                                         </div>
-                                        <div class="mb-3">
-                                            <label for="apellidoAdmin" class="form-label fw-semibold">Apellidos</label>
-                                            <input type="text" class="form-control" id="apellidoAdmin"
-                                                name="apellidoAdmin" required>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="claveadmin" class="form-label fw-semibold">Contraseña</label>
-                                            <input type="password" class="form-control" id="claveAdmin"
-                                                name="claveAdmin" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-6 col-lg-6">
                                         <div class="mb-3">
                                             <label for="correoAdmin" class="form-label fw-semibold">Correo
                                                 electrónico</label>
                                             <input type="email" class="form-control" id="correoAdmin"
-                                                placeholder="admin@gmail.com" name="correoAdmin" required>
+                                                   placeholder="admin@gmail.com" name="correoAdmin" required>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="claveadmin" class="form-label fw-semibold">Contraseña</label>
+                                            <input type="password" class="form-control" id="claveAdmin" placeholder="Escribe la constraseña"
+                                                name="claveAdmin" pattern="(?=.*\d)(?=.*[A-Z]).{8,}"
+                                                   title="Debe contener al menos un número, una mayúscula y ocho caracteres o más." required>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12 col-md-6 col-lg-6">
+                                        <div class="mb-3">
+                                            <label for="apellidoAdmin" class="form-label fw-semibold">Apellido</label>
+                                            <input type="text" class="form-control" id="apellidoAdmin"
+                                                   name="apellidoAdmin" placeholder="Castro Alemán" required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="aliasAdmin" class="form-label fw-semibold">Alías</label>
                                             <input type="text" class="form-control" id="aliasAdmin" name="aliasAdmin"
-                                                required>
+                                                placeholder="Ejem: MCastro24" required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="confirmarClave" class="form-label fw-semibold">Confirmar
                                                 contraseña</label>
                                             <input type="password" class="form-control" id="confirmarClave"
-                                                name="confirmarClave" required>
+                                                name="confirmarClave" placeholder="Confirma nuevamente la contraseña" required>
                                         </div>
-                                        <input type="hidden" id="fechaRegistroAdmin" name="fechaRegistroAdmin">
                                     </div>
                                 </div>
                             </div>
                             <div class="container text-center mb-4 mt-4">
-                                <button type="submit" class="btn btn-orange-color text-light me-3"
-                                    data-bs-dismiss="modal">Guardar</button>
+                                <button type="submit" class="btn btn-orange-color text-light me-3">Guardar</button>
                                 <button type="reset" class="btn btn-red-color text-light">Cancelar</button>
                             </div>
                         </div>
@@ -203,9 +202,8 @@
                                     </div>
                                 </div>
                                 <div class="container text-center mb-2 mt-4">
-                                    <button type="submit" class="btn btn-orange-color text-light me-3"
-                                        data-bs-dismiss="modal" id="btn_guardar" name="btnGuardar">Guardar</button>
-                                    <button type="reset" class="btn btn-red-color text-light" id="btn_cancelar"
+                                    <button type="submit" class="btn btn-orange-color text-light me-3" name="btnGuardar">Guardar</button>
+                                    <button type="reset" class="btn btn-red-color text-light"
                                         name="btnCancelar">Cancelar</button>
                                 </div>
                             </div>
