--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -105,15 +105,15 @@
                                     <!-- Botón para cargar imagen -->
                                     <input type="file" class="form-control" id="imagenMarca" name="imagenMarca" hidden>
                                     <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                    <label class="btn btn-red-color text-light" for="imagenMarca">Cargar imagen</label>
+                                    <label class="btn btn-red-color text-light btn-sm" for="imagenMarca">Cargar imagen</label>
                                 </div>
                             </div>
                             <!-- Sección para ingresar el nombre de la marca -->
-                            <div class="row container d-flex align-items-center">
+                            <div class="row container d-flex align-items-center mt-4">
                                 <div class="col">
                                     <label for="nombreMarca" class="fs-8 btn-orange-color fw-semibold"> Nombre</label>
-                                    <input type="text" class="form-control" aria-label="codigo" name="nombreMarca"
-                                        id="nombreMarca">
+                                    <input type="text" class="form-control" name="nombreMarca" placeholder="Escribe el nombre de la marca"
+                                        id="nombreMarca" required>
                                     <br>
                                     <div class="container text-center">
                                         <!-- Botón para agregar la marca -->
