Segunda revisión de validaciones

--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -102,8 +102,8 @@
                             <div class="row">
                                 <div class="col-12">
                                     <p class="fs-8 btn-orange-color fw-bold">Nombre del permiso</p>
-                                    <input type="text" class="form-control shadow bg-white" placeholder="Ej. Analista"
-                                        aria-label="codigo" id="NombrePermiso" name="NombrePermiso">
+                                    <input type="text" class="form-control shadow bg-white" placeholder="Ejem. Analista"
+                                        aria-label="codigo" id="NombrePermiso" name="NombrePermiso" maxlength="50">
                                     <br>
                                 </div>
                                 <div class="col-12">
