--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -109,12 +109,12 @@
                             <div class="row mt-3">
                                 <div class="col-sm-12 col-md-6">
                                     <p class="fs-8 btn-orange-color fw-bold"> Código</p>
-                                    <input type="text" class="form-control" placeholder="#####" aria-label="codigo"
+                                    <input type="text" class="form-control" placeholder="########" aria-label="codigo"
                                         id="codigoCupon" name="codigoCupon" maxlength="8" minlength="4" required>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
-                                    <input type="number" min="1" max="100" class="form-control" placeholder="100%"
+                                    <input type="number" min="1" max="100" class="form-control" placeholder="Escribe el porcentaje"
                                         aria-label="porcentajeCupon" id="porcentajeCupon" name="porcentajeCupon"
                                         required>
                                 </div>
