--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -92,8 +92,7 @@
 
         <!-- Modals -->
         <!-- Agregar producto -->
-        <div class="modal fade" id="saveModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
+        <div class="modal fade" id="saveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable modal-fullscreen-sm-down">
                 <div class="modal-content">
                     <div class="modal-header bg-orange-color">
@@ -104,11 +103,11 @@
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                             aria-label="Close"></button>
                     </div>
-                        <form action="" id="saveForm">
-                            <div class="modal-body">
+                    <form action="" id="saveForm">
+                        <div class="modal-body">
                             <!-- Fila 1 -->
-                                <input type="hidden" id="idProducto" name="idProducto">
-                                <div class="container text-center text-md-start text-lg-start">
+                            <input type="hidden" id="idProducto" name="idProducto">
+                            <div class="container text-center text-md-start text-lg-start">
                                 <div class="row align-items-center gy-3">
                                     <div class="col-sm-12 col-md-auto">
                                         <img class="rounded-1" id="imagen" src="../../resources/img/png/rectangulo.png"
@@ -116,14 +115,16 @@
                                     </div>
                                     <div class="col">
                                         <!-- Botón para cargar imagen -->
-                                        <input type="file" class="form-control" id="imgProduct" name="imagenProducto" hidden>
+                                        <input type="file" class="form-control" id="imgProduct" name="imagenProducto"
+                                            hidden>
                                         <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                        <label class="btn btn-red-color text-light" for="imgProduct">Cargar imagen</label>
+                                        <label class="btn btn-red-color text-light" for="imgProduct">Cargar
+                                            imagen</label>
                                     </div>
                                     <div class="col-sm-12 col-md-auto">
                                         <div class="form-check form-switch float-end mb-md-5">
-                                            <input class="form-check-input" type="checkbox"
-                                                role="switch" id="switchPerros" name="EstadoProducto" checked>
+                                            <input class="form-check-input" type="checkbox" role="switch"
+                                                id="switchPerros" name="EstadoProducto" checked>
                                         </div>
                                     </div>
                                 </div>
@@ -135,13 +136,13 @@
                                         <div class="mb-3">
                                             <label for="nombreProducto" class="form-label fw-semibold">Nombre</label>
                                             <input type="text" class="form-control" id="nombreProducto"
-                                                name="nombreProducto" required>
+                                                name="nombreProducto" placeholder="Escribe el nombre del producto" required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="descripcionProducto"
                                                 class="form-label fw-semibold">Descripción</label>
                                             <textarea class="form-control" id="descripcionProducto"
-                                                name="descripcionProducto" rows="3" required></textarea>
+                                                name="descripcionProducto" placeholder="Escribe la descripción del producto" rows="3" required></textarea>
                                         </div>
                                         <div class="row">
                                             <div class="col">
@@ -149,7 +150,7 @@
                                                     <label for="precioProducto"
                                                         class="form-label fw-semibold">Precio</label>
                                                     <input type="number" min="0" step="any" class="form-control"
-                                                        id="precioProducto" name="precioProducto" required>
+                                                        id="precioProducto" placeholder="Escribe el precio del producto" name="precioProducto" required>
                                                 </div>
                                             </div>
                                             <div class="col">
@@ -157,7 +158,7 @@
                                                     <label for="cantidadProducto"
                                                         class="form-label fw-semibold">Cantidad</label>
                                                     <input type="number" class="form-control" id="cantidadProducto"
-                                                        name="existenciaProducto" required>
+                                                        name="existenciaProducto" placeholder="Escribe la existencia de este producto" required>
                                                 </div>
                                             </div>
                                         </div>
@@ -165,14 +166,16 @@
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <div class="mb-3">
                                             <label for="mascotaSelect" class="form-label fw-semibold">Mascota</label>
-                                            <select class="form-select" id="mascotaSelect" name="mascotasProducto" required>
+                                            <select class="form-select" id="mascotaSelect" name="mascotasProducto"
+                                                required>
                                                 <option>Selecciona la mascota</option>
                                                 <option>Perro</option>
                                                 <option>Gato</option>
                                             </select>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="categoriaSelect" class="form-label fw-semibold">Categoría</label>
+                                            <label for="categoriaSelect"
+                                                class="form-label fw-semibold">Categoría</label>
                                             <select class="form-select" id="categoriaSelect" name="idCategoria"
                                                 required>
                                             </select>
@@ -193,88 +196,84 @@
 
                                 </div>
                             </div>
-                    </div>
-                    <div class="container text-center mb-4 mt-4">
-                        <button type="submit" class="btn btn-orange-color text-light me-3"
-                            id="btnGuardar" name="btnGuardar">Guardar</button>
-                        <button type="reset" class="btn btn-red-color text-light" id="btnCancelar"
-                            name="btnCancelar">Cancelar</button>
-                    </div>
-                    </form>
-            </div>
-        </div>
-
-        <!-- Informacion producto -->
-        <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
-                <div class="modal-content">
-                    <div class="modal-header bg-orange-color">
-                        <div class="container text-center text-light">
-                            <h1 class="modal-title fs-5 text-center fw-bold" id="titleModalInfo"></h1>
                         </div>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="" id="seeForms">
-                            <!-- Fila 1 -->
-                            <div class="container text-center text-md-start text-lg-start">
-                                <div class="row align-items-center gy-3">
-                                    <div class="col-sm-12 col-md-auto">
-                                        <img class="rounded-1" id="imagenInfo" src="../../resources/img/png/rectangulo.png"
-                                            width="120px">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Fila 2 -->
-                            <div class="container mt-4">
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-6 col-lg-6 ">
-                                        <div class="mb-3">
-                                            <label class="form-label fw-semibold mb-0">Nombre</label>
-                                            <p id="nombre">Bola giratoria - Juguetes de gato</p>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label
-                                                class="form-label fw-semibold mb-0">Descripción</label>
-                                            <p id="descripcion">Pelotas de plástico de diferentes colores</p>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label
-                                                class="form-label fw-semibold mb-0">Mascota</label>
-                                            <p id="tipo_mascota">Gatos</p>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label
-                                                class="form-label fw-semibold mb-0">Categoría</label>
-                                            <p id="categoria">Entretenimiento</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-6 col-lg-6">
-                                        <div class="mb-3">
-                                            <label
-                                                class="form-label fw-semibold mb-0">Precio</label>
-                                            <p id="precio">Entretenimiento</p>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label
-                                                class="form-label fw-semibold mb-0">Cantidad</label>
-                                            <p id="cantidad">$20.50</p>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label
-                                                class="form-label fw-semibold mb-0">Marca</label>
-                                            <p id="marca">MIMI</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
+                        <div class="container text-center mb-4 mt-4">
+                            <button type="submit" class="btn btn-orange-color text-light me-3" id="btnGuardar"
+                                name="btnGuardar">Guardar</button>
+                            <button type="reset" class="btn btn-red-color text-light" id="btnCancelar"
+                                name="btnCancelar">Cancelar</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+
+            <!-- Informacion producto -->
+            <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header bg-orange-color">
+                            <div class="container text-center text-light">
+                                <h1 class="modal-title fs-5 text-center fw-bold" id="titleModalInfo"></h1>
+                            </div>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="seeForms">
+                                <!-- Fila 1 -->
+                                <div class="container text-center">
+                                    <div class="row align-items-center justify-content-center  gy-3">
+                                        <div class="col-sm-12 col-md-auto">
+                                            <img class="rounded-1" id="imagenInfo"
+                                                src="../../resources/img/png/rectangulo.png" width="150px" height="150px">
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Fila 2 -->
+                                <div class="container mt-4">
+                                    <div class="row">
+                                        <div class="col-sm-12 col-md-6 col-lg-6">
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Nombre</label>
+                                                <p id="nombre">Bola giratoria - Juguetes de gato</p>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Descripción</label>
+                                                <p id="descripcion">Pelotas de plástico de diferentes colores</p>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Mascota</label>
+                                                <p id="tipo_mascota">Gatos</p>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Categoría</label>
+                                                <p id="categoria">Entretenimiento</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12 col-md-6 col-lg-6">
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Precio</label>
+                                                <p id="precio">Entretenimiento</p>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Cantidad</label>
+                                                <p id="cantidad">$20.50</p>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label fw-semibold mb-0">Marca</label>
+                                                <p id="marca">MIMI</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+
     </main>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
