Tercera revisión de validaciones

--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -33,7 +33,7 @@
                             <div class="mb-4">
                                 <label for="name_login" class="form-label">Alias</label>
                                 <input type="text" class="form-control bg-skin-color p-2" id="name_login"
-                                    name="nameLogin">
+                                    name="nameLogin" required>
                             </div>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                             <div class="mb-4">
                                 <label for="password_login" class="form-label">Contraseña</label>
                                 <input type="password" class="form-control bg-skin-color p-2" id="password_login"
-                                    name="passwordLogin">
+                                    name="passwordLogin" required>
                             </div>
                         </div>
                     </div>
