--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -105,17 +105,16 @@
                                         <label class="fs-8 btn-orange-color fw-semibold"
                                             for="nombreProductoValoracion">
                                             Producto</label>
-                                        <input type="text" name="nombreProductoValoracion"
-                                            id="nombreProductoValoracion" class="form-control" aria-label="codigo"
-                                            disabled readonly>
+                                        <textarea class="form-control" id="nombreProductoValoracion" name="nombreProductoValoracion"
+                                                  rows="3" disabled></textarea>
                                     </div>
                                     <br>
                                     <div>
                                         <label class="fs-8 btn-orange-color fw-semibold"
                                             for="nombreClienteValoracion">
                                             Cliente</label>
-                                        <input type="text" name="nombreClienteValoracion" id="nombreClienteValoracion"
-                                            class="form-control" aria-label="codigo" disabled readonly>
+                                        <textarea class="form-control" id="nombreClienteValoracion" name="nombreClienteValoracion"
+                                                  rows="2" disabled></textarea>
                                     </div>
                                 </div>
                                 <div class="col-4 d-flex flex-column align-items-center justify-content-center">
@@ -154,7 +153,7 @@
                                         <label for="comentarioValoracion" class="form-label fw-semibold">Mensaje</label>
                                         <!-- Área de texto para el mensaje del comentario -->
                                         <textarea class="form-control" id="comentarioValoracion" name="comentarioValoracion"
-                                            rows="3" disabled></textarea>
+                                            rows="4" disabled></textarea>
                                     </div>
                                     <div class="form-check form-switch float-end mb-md-5">
                                         <label class="form-check-label" for="estadoValoracion">Estado</label>
