--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -44,7 +44,8 @@
             <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
             <div class="row align-items-center gy-4">
                 <div>
-                    <p>Observa todos los pedidos que se han tenido en Huellitas Pet's, recuerda cambiar el estado de los pedidos.</p>
+                    <p>Observa todos los pedidos que se han tenido en Huellitas Pet's, recuerda cambiar el estado de los
+                        pedidos.</p>
                 </div>
             </div>
         </div>
@@ -182,8 +183,8 @@
                     <!-- Pie del modal -->
                     <div class="container text-center mb-3">
                         <!-- Botón para salir del modal -->
-                        <button type="button" class="btn btn-orange-color text-white"
-                            data-bs-dismiss="modal">Salir</button>
+                        <button type="button" class="btn btn-orange-color text-white" data-bs-dismiss="modal"
+                            onclick=resetDataTable()>Salir</button>
                     </div>
                 </div>
             </div>
@@ -208,4 +209,5 @@
     <!-- Nos permite cambiar el idioma de la paginacion-->
     <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
+
 </html>
