--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -163,7 +163,7 @@
                                         <input class="form-check-input" type="checkbox" role="switch"
                                             id="ver_categoria" name="ver_categoria" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
-                                            categorias</label>
+                                            categorías</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
